--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,11 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>nodefullstack</title>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+      <link rel="stylesheet" href="/css/styles.css" />
 
 </head>
 <body>
+  <div class="container mb-4">
   {{{body}}}
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+      </div> 
 
 </body>
 </html>
